Remove old blog posts

--- a/_posts/2024-09-22-AEX-PEI-&-NB-2025.md
+++ b/_posts/2024-09-22-AEX-PEI-&-NB-2025.md
@@ -4,7 +4,7 @@ author: DeviCat
 ---
 
 ![](/img/AEX_Banner.jpg)
-I am excited to announce that I will be doing artist alley at **[AEX](https://atlanticexpo.ca/)** in Charlottetown PEI and Fredericton New Brunswick next year!
+I am excited to announce that I will be doing artist alley at **[AEX](https://atlanticexpo.ca/)** in Charlottetown PEI and Fredericton New Brunswick!
 
 <!--card-->
 
