Miramichi River Fan Fest & more
Add blog post
Rename other blog posts so they are in chronological order

--- a/_posts/2024-12-11-MiraCon-2025.md
+++ b/_posts/2024-12-11-MiraCon-2025.md
@@ -9,6 +9,6 @@ I will be a vendor at **[MiraCon](https://www.miraconfestivals.ca/home)**
 <!--card-->
 
 - **Date:** May 17th &#45; 18th 2025
-- **Location** Miramichi NB Canada
+- **Location** French Fort Cove Eco Centre, Miramichi NB Canada
 
 ---
