--- a/_posts/2024-12-11-AEX-PEI-&-NB-2025.md
+++ b/_posts/2024-12-11-AEX-PEI-&-NB-2025.md
@@ -11,4 +11,10 @@ I will be a vendor at **[AEX](https://atlanticexpo.ca/)** in Charlottetown PEI a
 - **AEX PEI:** March 29th &#45; 30th 2025
 - **AEX Fredericton NB:** April 12th &#45; 13th 2025
 
+![](/img/aexpei_map.png)
+Find me at table 13 in Charlottetown PEI!
+
+![](/img/aexfred_map.png)
+Find me at table 44 in Fredericton NB!
+
 ---
