Fix animaritime banner

--- a/_posts/2025-02-02-Animaritime-2025.md
+++ b/_posts/2025-02-02-Animaritime-2025.md
@@ -3,7 +3,7 @@ layout: post
 author: DeviCat
 ---
 
-![](/img/MiraCon2025.png)
+![](/img/animaritime2025.jpg)
 I will be a vendor at **[Animaritime](https://www.facebook.com/animaritimecon)**
 
 <!--card-->
