Edit animaritime blog

--- a/_posts/2025-05-23-Animaritime-2025.md
+++ b/_posts/2025-05-23-Animaritime-2025.md
@@ -3,7 +3,7 @@ layout: post
 author: DeviCat
 ---
 
-![](/img/animaritime2025.jpg)
+![](/img/animaritime_map_devicat.png)
 I will be a vendor at **[Animaritime](https://www.facebook.com/animaritimecon)**
 
 <!--card-->
@@ -12,6 +12,6 @@ I will be a vendor at **[Animaritime](https://www.facebook.com/animaritimecon)**
 - **Location** Fredericton NB Canada.
 
 ![](/img/animaritime_map.png)
-Find me at table A31!
+Find me at table A21!
 
 ---
