--- a/_posts/2025-07-10-AEX-SJ-2025.md
+++ b/_posts/2025-07-10-AEX-SJ-2025.md
@@ -9,9 +9,10 @@ I will be an artist at **[AEX Saint John](https://atlanticexpo.ca/)**
 <!--card-->
 
 - **Date:** July 19 - 20th 2025
-- **Location** Saint John, NB Canada.
+- **Location:** Saint John, NB Canada.
+- **Table:** 37
 
 ![](/img/devicat_aexsj2025_map.webp)
-Find me at table 37.
+
 
 ---
