--- a/_posts/2025-07-10-AEX-SJ-2025.md
+++ b/_posts/2025-07-10-AEX-SJ-2025.md
@@ -12,6 +12,8 @@ I will be an artist at **[AEX Saint John](https://atlanticexpo.ca/)**
 - **Location:** Saint John, NB Canada.
 - **Table:** 37
 
+Use discount code SJ15 to save 15% on tickets!
+
 ![](/img/devicat_aexsj2025_map.webp)
 
 
